--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
 	"author": "Sheetbase",
 	"homepage": "https://sheetbase.net",
 	"license": "MIT",
+	"keywords": [
+		"google-apps-script",
+		"es6",
+		"polyfill",
+		"shim"
+	],
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/sheetbase/module-polyfill-server.git"
