--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@sheetbase/polyfill-server",
 	"type": "module",
-	"version": "0.35.3-2",
+	"version": "0.35.3-3",
 	"description": "Es6 shim for Google apps script.",
 	"author": "Sheetbase",
 	"homepage": "https://sheetbase.net",
@@ -23,9 +23,10 @@
 	"bugs": {
 		"url": "https://github.com/sheetbase/module-polyfill-server/issues"
 	},
-	"dependencies": {},
+	"dependencies": {
+		"@sheetbase/app-scripts": "file:../../app-scripts/dist/sheetbase-app-scripts-0.0.4.tgz"
+	},
 	"devDependencies": {
-		"@sheetbase/app-scripts": "0.0.3",
 		"@types/google-apps-script": "0.0.28"
 	}
 }
