--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
 	"type": "module",
 	"version": "0.35.3-3",
 	"description": "Es6 shim for Google apps script.",
-	"author": "Sheetbase",
-	"homepage": "https://sheetbase.net",
+	"author": "Paul Miller",
+	"homepage": "https://github.com/paulmillr/es6-shim",
 	"license": "MIT",
 	"scripts": {
-		"build": "sheetbase-app-scripts build --vendor",
+		"build:code": "sheetbase-app-scripts build --vendor",
+		"build:readme": "sheetbase-app-scripts readme --no-docs",
+		"build": "npm run build:code && npm run build:readme",
 		"push": "sheetbase-app-scripts push"
 	},
 	"keywords": [
@@ -25,7 +27,7 @@
 	},
 	"dependencies": {},
 	"devDependencies": {
-		"@sheetbase/app-scripts": "0.0.5",
+		"@sheetbase/app-scripts": "0.0.7",
 		"@types/google-apps-script": "0.0.28"
 	}
 }
